--- a/src/SMTC/MainBundle/Resources/views/layout.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/layout.html.twig
@@ -1,5 +1,36 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    {% block content %}{% endblock %}
+    {% block navbar %}
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="#">Show me the code!</a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav">
+                            <li class="active"><a href="#">Home</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+        {% endblock %}
+
+        <div class="container">
+
+            {% block content %}{% endblock %}
+
+            <hr>
+            {% block footer %}
+            <footer>
+                <p>&copy; Showmethecode.es {{ "now"|date("Y") }}</p>
+            </footer>
+            {% endblock %}
+
+        </div> <!-- /container -->
 {% endblock %}
