--- a/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
 {% block content %}
-    <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
         <h1>Talk is cheap. Show me the code!</h1>
         <p>En esta página veremos en funcionamiento los ejemplos que se pueden ver en el blog relacionados con Symfony2 y enlazaremos con el código en Github.</p>
         <p><a href="http://showmethecode.es" class="btn btn-primary btn-large">Ir al Blog &raquo;</a></p>
     </div>
 {% endblock %}
+
+{% set code = code(_self) %}
