Added UserPassword Constraint example

--- a/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
@@ -7,6 +7,7 @@
         <div class="span12">
             <ul>
                 <li><a href="{{ path('examples_dependent_selects') }}">Selects dependientes</a></li>
+                <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a></li>
             </ul>
         </div>
     </div>
