UserPassword Example - Add password in the template

--- a/src/SMTC/MainBundle/Resources/views/Example/userPassword.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/userPassword.html.twig
@@ -22,6 +22,7 @@
                     Guardar
                 </button>
             </form>
+            <p>Password: <strong>smtc</strong></p>
         </div>
     </div>
 {% endblock %}
