Change password in userpassword example

--- a/src/SMTC/MainBundle/Resources/views/Example/userPassword.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/userPassword.html.twig
@@ -12,7 +12,7 @@
                     Guardar
                 </button>
             </form>
-            <p>Password: <strong>smtc</strong></p>
+            <p>Password: <strong>smtcpass</strong></p>
         </div>
     </div>
 {% endblock %}
