--- a/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
@@ -8,6 +8,7 @@
             <ul>
                 <li><a href="{{ path('examples_dependent_selects') }}">Selects dependientes</a></li>
                 <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a></li>
+                <li><a href="{{ path('examples_impersonating') }}">Impersonating</a></li>
             </ul>
         </div>
     </div>
