Added response examples

--- a/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/examples.html.twig
@@ -9,6 +9,7 @@
                 <li><a href="{{ path('examples_dependent_selects') }}">Selects dependientes</a></li>
                 <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a></li>
                 <li><a href="{{ path('examples_impersonating') }}">Impersonating</a></li>
+                <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a></li>
             </ul>
         </div>
     </div>
