Fix links to response examples

--- a/src/SMTC/MainBundle/Resources/views/Example/responses.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/responses.html.twig
@@ -14,7 +14,7 @@ public function responseAction()
 }</pre>
                 </li>
                 <li>
-                    <a href="{{ path('responses_json') }}">ResponseRedirect</a>
+                    <a href="{{ path('responses_redirect') }}">ResponseRedirect</a>
                     <pre class="prettyprint">
 public function redirectAction()
 {
@@ -22,7 +22,7 @@ public function redirectAction()
 }</pre>
                 </li>
                 <li>
-                    <a href="{{ path('responses_jsonp') }}">JsonResponse</a>
+                    <a href="{{ path('responses_json') }}">JsonResponse</a>
                     <pre class="prettyprint">
 public function jsonResponseAction()
 {
@@ -33,7 +33,7 @@ public function jsonResponseAction()
 }</pre>
                 </li>
                 <li>
-                    <a href="{{ path('responses_redirect') }}">JsonResponse (JSONP)</a>
+                    <a href="{{ path('responses_jsonp') }}">JsonResponse (JSONP)</a>
                     <pre class="prettyprint">
 public function jsonpResponseAction()
 {
