Controllers and views refactor, split in some controllers

--- a/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
@@ -10,6 +10,7 @@
                 <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a></li>
                 <li><a href="{{ path('examples_impersonating') }}">Impersonating</a></li>
                 <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a></li>
+                <li><a href="{{ path('examples_events') }}">Eventos</a></li>
             </ul>
         </div>
     </div>
