Added Links to articles

--- a/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
@@ -6,10 +6,10 @@
     <div class="row">
         <div class="span12">
             <ul>
-                <li><a href="{{ path('examples_dependent_selects') }}">Selects dependientes</a></li>
-                <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a></li>
-                <li><a href="{{ path('examples_impersonating') }}">Impersonating</a></li>
-                <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a></li>
+                <li><a href="{{ path('examples_dependent_selects') }}">Selects dependientes</a> - <a href="http://showmethecode.es/php/symfony/symfony2-selects-dependientes-mediante-eventos/" title="Symfony2: Selects dependientes mediante eventos">Artículo</a></li>
+                <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a> - <a href="http://showmethecode.es/php/symfony/userpassword-constraint/" title="Symfony2: UserPassword Constraint">Artículo</a></li>
+                <li><a href="{{ path('examples_impersonating') }}">Impersonating</a> - <a href="http://showmethecode.es/php/symfony/impersonating-hacerse-pasar-por-otro-usuario-en-symfony2/" title="Symfony2: Impersonating – Hacerse pasar por otro usuario">Artículo</a></li>
+                <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a> - <a href="http://showmethecode.es/php/symfony/symfony2-response-responseredirect-jsonresponse-y-streamedresponse/" title="Symfony2: Response, ResponseRedirect, JsonResponse y StreamedResponse">Artículo</a></li>
                 <li><a href="{{ path('examples_events') }}">Eventos</a></li>
             </ul>
         </div>
