--- a/src/SMTC/MainBundle/Resources/views/Example/Location/edit_location.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Location/edit_location.html.twig
@@ -58,3 +58,4 @@
 {% endblock %}
 
 {% set code = code(_self) %}
+{% set article_link = 'http://showmethecode.es/php/symfony/symfony2-selects-dependientes-mediante-eventos/' %}
