--- a/src/SMTC/MainBundle/Resources/views/Example/Response/responses.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Response/responses.html.twig
@@ -76,3 +76,4 @@ public function streamedResponseAction()
 {% endblock %}
 
 {% set code = code(_self) %}
+{% set article_link = 'http://showmethecode.es/php/symfony/symfony2-response-responseredirect-jsonresponse-y-streamedresponse/' %}
