--- a/src/SMTC/MainBundle/Resources/views/Example/User/impersonating.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/User/impersonating.html.twig
@@ -19,3 +19,4 @@
 {% endblock %}
 
 {% set code = code(_self) %}
+{% set article_link = 'http://showmethecode.es/php/symfony/impersonating-hacerse-pasar-por-otro-usuario-en-symfony2/' %}
