--- a/src/SMTC/MainBundle/Resources/views/Example/User/userPassword.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/User/userPassword.html.twig
@@ -18,3 +18,4 @@
 {% endblock %}
 
 {% set code = code(_self) %}
+{% set article_link = 'http://showmethecode.es/php/symfony/userpassword-constraint/' %}
