--- a/src/SMTC/MainBundle/Resources/views/Example/Event/events.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Event/events.html.twig
@@ -13,3 +13,4 @@
 {% endblock %}
 
 {% set code = code(_self) %}
+{% set article_link = 'http://showmethecode.es/php/symfony/symfony2-custom-events/' %}
