--- a/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
@@ -10,7 +10,7 @@
                 <li><a href="{{ path('examples_userpassword') }}">UserPassword Constraint</a> - <a href="http://showmethecode.es/php/symfony/userpassword-constraint/" title="Symfony2: UserPassword Constraint">Artículo</a></li>
                 <li><a href="{{ path('examples_impersonating') }}">Impersonating</a> - <a href="http://showmethecode.es/php/symfony/impersonating-hacerse-pasar-por-otro-usuario-en-symfony2/" title="Symfony2: Impersonating – Hacerse pasar por otro usuario">Artículo</a></li>
                 <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a> - <a href="http://showmethecode.es/php/symfony/symfony2-response-responseredirect-jsonresponse-y-streamedresponse/" title="Symfony2: Response, ResponseRedirect, JsonResponse y StreamedResponse">Artículo</a></li>
-                <li><a href="{{ path('examples_events') }}">Eventos</a></li>
+                <li><a href="{{ path('examples_events') }}">Eventos</a> - <a href="http://showmethecode.es/php/symfony/symfony2-custom-events/" title="Symfony2: Custom Events">Artículo</a></li>
             </ul>
         </div>
     </div>
