Changed article color link

--- a/src/SMTC/MainBundle/Resources/views/layout.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/layout.html.twig
@@ -67,7 +67,7 @@
                             Show me the code! <b class="caret"></b>
                         </button>
                         {% if article_link is defined %}
-                            <a href="{{ article_link }}" class="btn btn-success">Ir al artículo</a>
+                            <a href="{{ article_link }}" class="btn btn-primary">Ir al artículo</a>
                         {% endif %}
                         <div id="shomethecode" class="collapse">{{ code|raw }}</div>
                     </div>
