--- a/src/SMTC/MainBundle/Resources/views/layout.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/layout.html.twig
@@ -50,7 +50,7 @@
                         {% if app.session.flashbag.has(session_var) %}
                             <div class="alert {{ 'alert-' ~ notice_level }}">
                                 {% for flash in app.session.flashbag.get(session_var) %}
-                                    <p>{{ flash }}</p>
+                                    <p>{{ flash|raw }}</p>
                                 {% endfor %}
                             </div>
                         {% endif %}
