--- a/src/SMTC/MainBundle/Resources/views/Example/Form/new_one_to_many.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Form/new_one_to_many.html.twig
@@ -100,7 +100,7 @@
                 });
             });
 
-            $(".close").on('click', function(){
+            $(document).on('click', '.close', function(){
                 $(this).closest('.address').fadeOut(500, function() {
                     $(this).remove();
                 });
