Changed link to the new embed forms article

--- a/src/SMTC/MainBundle/Resources/views/Example/Form/forms.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Form/forms.html.twig
@@ -30,7 +30,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>OneToOne y ManyToOne (Usuario con perfil y direcciones)
+                <li>OneToOne y OnetToMany (Usuario con perfil y direcciones)
                     <ul>
                         <li><a href="{{ path('examples_forms_user_create') }}">Crear Usuario</a></li>
                         <li>Editar Usuario
@@ -48,4 +48,4 @@
 {% endblock %}
 
 {% set code = code(_self) %}
-{% set article_link = 'http://showmethecode.es/php/symfony/symfony2-custom-events/' %}
+{% set article_link = 'http://showmethecode.es/php/symfony/symfony2-embeber-formularios-con-relaciones/' %}
