Added Virtual field option example

--- a/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
@@ -12,6 +12,7 @@
                 <li><a href="{{ path('examples_responses') }}">Tipos de respuesta</a> - <a href="http://showmethecode.es/php/symfony/symfony2-response-responseredirect-jsonresponse-y-streamedresponse/" title="Symfony2: Response, ResponseRedirect, JsonResponse y StreamedResponse">Artículo</a></li>
                 <li><a href="{{ path('examples_events') }}">Eventos</a> - <a href="http://showmethecode.es/php/symfony/symfony2-custom-events/" title="Symfony2: Custom Events">Artículo</a></li>
                 <li><a href="{{ path('examples_forms') }}">Embeber formularios con relaciones</a> - <a href="http://showmethecode.es/php/symfony/symfony2-embeber-formularios-con-relaciones/" title="Symfony2: Embeber formularios con Relaciones">Artículo</a></li>
+                <li><a href="{{ path('examples_virtual_forms') }}">Opción virtual en formularios</a> - <a href="http://showmethecode.es/php/symfony/symfony2-opcion-virtual-en-los-formularios/" title="Symfony2: Opción virtual en los formularios">Artículo</a></li>
             </ul>
         </div>
     </div>
