--- a/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,10 @@
     <div class="hero-unit">
         <h1>Talk is cheap. Show me the code!</h1>
         <p>En esta página veremos en funcionamiento los ejemplos que se pueden ver en el blog relacionados con Symfony2 y enlazaremos con el código en Github.</p>
-        <p><a href="http://showmethecode.es" class="btn btn-primary btn-large">{{ global.button_msg }}</a></p>
+        <p>
+            <a href="{{ path('examples') }}" class="btn btn-success btn-large">Ver ejemplos</a>
+            <a href="http://showmethecode.es" class="btn btn-primary btn-large">{{ global.button_msg }}</a>
+        </p>
     </div>
 {% endblock %}
 
