Added example edit users

--- a/src/SMTC/MainBundle/Resources/views/Example/Form/forms.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Form/forms.html.twig
@@ -42,6 +42,7 @@
                         </li>
                     </ul>
                 </li>
+                <li><a href="{{ path('examples_forms_users_edit') }}">Editar Usuarios</a></li>
             </ul>
         </div>
     </div>
