--- a/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Default/examples.html.twig
@@ -15,6 +15,7 @@
                 <li><a href="{{ path('examples_virtual_forms') }}">Opción virtual en formularios</a> - <a href="http://showmethecode.es/php/symfony/symfony2-opcion-virtual-en-los-formularios/" title="Symfony2: Opción virtual en los formularios">Artículo</a></li>
                 <li><a href="{{ path('examples_query_random_order') }}">Doctrine2: Ordenar aleatoriamente</a> - <a href="http://showmethecode.es/php/doctrine2/doctrine2-ordenar-aleatoriamente/" title="Doctrine2: Ordenar aleatoriamente">Artículo</a></li>
                 <li><a href="{{ path('examples_query_subqueries') }}">Doctrine2: Subconsultas</a> - <a href="http://showmethecode.es/php/doctrine2/doctrine2-subconsultas/" title="Doctrine2: Subconsultas">Artículo</a></li>
+                <li><a href="{{ path('examples_virtual_forms_fish_create') }}">Form Extensions</a> - <a href="http://showmethecode.es/php/symfony/symfony2-form-extensions/" title="Symfony2: Form Extensions">Artículo</a></li>
             </ul>
         </div>
     </div>
